# ts_utils

./: .gitignore  .pdm-python  .pdm.toml  README.md  mkdocs.yaml  pyproject.toml
docs/: README.md  recipes.md
docs/api/: core.md  cursor_utils.md  general.md  language_utils.md  traversals.md
docs/source/: conf.py  index.rst
notebooks/: ts_utils.ipynb
tests/: test_collections.py  test_cursor_utils.py  test_iter.py  test_traversals.py
ts_utils/: __init__.py  collections.py  core.py  cursor_utils.py  custom_tree.py  iter.py  matrix.py  mocks.py  parsing.py  predicates.py  syntax_tree.py  test_iter.py  traversals.py  typing.py  util.py
