[tool.poetry]
authors = ["Devjeet Roy <devjeetrr@gmail.com>"]
description = ""
name = "ts_utils"
version = "0.1.0"

[tool.poetry.dependencies]
GitPython = "^3.1.24"
python = ">=3.7,<3.11"
tqdm = "^4.62.3"
tree-sitter = "^0.19.0"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.6"
pytest = "^5.2"
yapf = "^0.31.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
